# ttfautohint

./: .gitignore  .gitmodules  COPYING  INSTALL.git  Makefile.am  NEWS  README  THANKS  TODO  bootstrap.conf  configure.ac  no-copyright  pledgies  update-copyright
doc/: .gitignore  Makefile.am  c2pandoc.sed  handle-images.hs  make-snapshot.sh  strip-comments.sh  template.html  template.tex  ttfautohint-1.pandoc  ttfautohint-2.pandoc  ttfautohint-3.pandoc  ttfautohint.css
frontend/: .gitignore  Makefile.am  ddlineedit.cpp  ddlineedit.h  hint.cpp  info.cpp  info.h  lineedit.cpp  lineedit.h  main.cpp  maingui.cpp  maingui.h  ttlineedit.cpp  ttlineedit.h
lib/: .gitignore  Makefile.am  hint.c  numberset.c  numberset.h  ta.h  tabytecode.c  tabytecode.h  tacvt.c  tadummy.c  taerror.c  tafile.c  tafont.c  tafpgm.c  tagasp.c  taglobal.c  taglobal.h  taglyf.c  tagpos.c  tahints.c  tahints.h  talatin.c  talatin.h  taloader.c  taloader.h  tamaxp.c  taname.c  tapost.c  taprep.c  tasfnt.c  tasort.c  tasort.h  tatime.c  tattc.c  tatypes.h  ttfautohint-errors.h  ttfautohint.c  ttfautohint.h
m4/: autotroll.m4
src/: .gitignore  Makefile.am  hint.c  ta.h  tabytecode.c  tabytecode.h  tacvt.c  tadsig.c  tadummy.c  tadummy.h  taerror.c  tafile.c  tafont.c  tafpgm.c  tagasp.c  tagloadr.c  tagloadr.h  taglobal.c  taglobal.h  taglyf.c  tagpos.c  tahints.c  tahints.h  tahmtx.c  talatin.c  talatin.h  taloader.c  taloader.h  taloca.c  tamaxp.c  tapost.c  taprep.c  tasfnt.c  tasort.c  tasort.h  tatables.c  tatables.h  tatime.c  tattc.c  tattf.c  (+5 more)
